--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h4 class="widget-title">CONTACTATE CON NOSOTRAS</h4>
-                            <p>Contactate con nosotras a travez de nuestras redes sociales, en Facebool e Instagram</p>
+                            <p>Contactate con nosotras a travez de nuestras redes sociales, en Facebook e Instagram</p>
                         </div>
                     </div>
                     <div class="row">
