Una correccion mas de otro parrafo

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
                     <div class="row" id="footer">
                         <div class="col-md-12 text-center">
-                            <p class="copyright-text">COLECTIVO FEMINISTA DE EZIZA 2022</p>
+                            <p class="copyright-text">COLECTIVO FEMINISTA DE EZEIZA 2022</p>
                         </div>
                     </div>
 
