agregamos metadatos para que se mejore la busque da de la paginación

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
         <title>Colectivo Feminista de Ezeiza</title>
-        <meta name="description" content="">
-        <!-- 
-    	Volton Template
-    	http://www.templatemo.com/tm-441-volton
-        -->
+        <meta name="description" content="Colectivo Feminista de Ezeiza">
+        <meta name="keyword" content="Colectivo, Feminista, Ezeiza, Popular">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" href="css/normalize.css">
