--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                     <li><a href="#top"><i class="fa fa-globe"></i>Bienvenidas</a></li>
                     <li><a href="#about"><i class="fa fa-pencil"></i>Nosotras</a></li>
                     <li><a href="#projects"><i class="fa fa-paperclip"></i>Galeria</a></li>
-                    <li><a href="#actividad"><i class="fa fa-picture-o"></i>Atividades</a><ol>
+                    <li><a href="#actividad"><i class="fa fa-picture-o"></i>Atividades</a><ul>
                         <li><a href="#violencia"><i class="fa fa-hand-o-right"></i>Violencia Institucional</a></li>
                         <li><a href="#niunamenos"><i class="fa fa-hand-o-right"></i>Ni Una Menos</a></li>
-                    </ol></li>
+                    </ul></li>
                     <li><a href="#contact"><i class="fa fa-link"></i>Contacto</a></li>
                     
                 </ul>
