Actualizamos la portada

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="col-md-12">
                         <div class="top-section">
                             <div class="profile-image">
-                                <img src="img/profile.png" alt="Volton">
+                                <img src="img/portada.jpg" alt="Volton">
                             </div>
                             <div class="profile-content">
                                 <h3 class="profile-title">Colectivo Feminista de Ezeiza</h3>
@@ -94,14 +94,18 @@
         
 
         <div class="banner-bg" id="top">
-            <div class="banner-overlay"></div>
+            <div class="banner-overlay">
+        
+            </div>
             <div class="welcome-text">
                 <h2>Colectivo Feminista | De Ezeiza</h2>
                 <h5></h5>
             </div>
         </div>
 
+
         <!-- CONTENIDO PRINCIPAL -->
+
         <div class="main-content">
             <div class="fluid-container">
 
@@ -113,7 +117,7 @@
                         <div class="col-md-12">
                             <h4 class="widget-title">Quienes Somos</h4>
                             <div class="about-image">
-                                <img src="img/portada.png" alt="about me">
+                                <img src="img/portada.jpg" alt="about me">
                             </div>
                             <p>Mostranos algunas de nuesrtas reuniones del <span class="blue">Colectivo Feminista de Ezeiza</span><span class="green"> en reuniones con las compañeras</span>. Charlamos sobre las problemáticas de Género, sociales y educaticvas, tratando de encontrar soluciones </p>
                             <hr>
