Sumamos mas fotos al slider lgbt

--- a/index.html
+++ b/index.html
@@ -307,6 +307,11 @@
                                     <li id="slide3"><img src="img/lgbt3.jpg" alt="..." loading="lazy"></li>
                                     <li id="slide4"><img src="img/lgbt4.jpeg" alt="..." loading="lazy"></li>
                                     <li id="slide5"><img src="img/lgbt5.jpeg" alt="..." loading="lazy"></li>
+                                    <li id="slide2"><img src="img/lgbt6.jpeg" alt="..." loading="lazy"></li>
+                                    <li id="slide3"><img src="img/lgbt7.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide4"><img src="img/lgbt8.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide5"><img src="img/lgbt9.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide5"><img src="img/lgbt10.jpg" alt="..." loading="lazy"></li>
                                 </ul>
                             
                                 <button type="button" class="slider-nav" aria-label="Go to previous"></button>
@@ -314,6 +319,11 @@
                             
                                 <div class="slider-indicators">
                                     <button aria-label="Go to slide" class="active"></button>
+                                    <button aria-label="Go to slide"></button>
+                                    <button aria-label="Go to slide"></button>
+                                    <button aria-label="Go to slide"></button>
+                                    <button aria-label="Go to slide"></button>
+                                    <button aria-label="Go to slide"></button>
                                     <button aria-label="Go to slide"></button>
                                     <button aria-label="Go to slide"></button>
                                     <button aria-label="Go to slide"></button>
