Pequeña corrección en el texto

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <div class="row" >
                             <div class="col-md-12" id="lgtb">
                                 <h4 class="widget-title">2 DE JULIO <strong>Jornada; No queremos ser iguales sino respetar las diferencias 🏳️‍🌈🌈 </strong></h4>
-                                <p>📅 Este sábado 2 de Julio, las compañeras integrantes del <strong>#ColectivoFeministaDeEzeiza</strong> junto a otras organizaciones sociales, políticas, funcionarias, etc. Participamos de la Jornada de Visibilización de diversidad<strong>#ColectivoFeministaDeEzeiza</strong> .  </p>
+                                <p>📅 Este sábado 2 de Julio, las compañeras integrantes del <strong>#ColectivoFeministaDeEzeiza</strong> junto a otras organizaciones sociales, políticas, funcionarias, etc. Participamos de la Jornada de Visibilización de diversidad <strong>#MesDelOrgullo</strong> .  </p>
                             </div>
                             
                         </div>
