--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="col-md-12">
                         <div class="top-section">
                             <div class="profile-image">
-                                <img src="img/portada.jpg" alt="Volton">
+                                <img src="img/profile.png" alt="Volton">
                             </div>
                             <div class="profile-content">
                                 <h3 class="profile-title">Colectivo Feminista de Ezeiza</h3>
