--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <title>Colectivo Feminista de Ezeiza</title>
         <meta name="description" content="Colectivo Feminista de Ezeiza">
-        <meta name="keyword" content="Colectivo, Feminista, Ezeiza, Popular">
+        <meta name="keyword" content="Colectivo, Feminista, Ezeiza, Popular, Femininismo, militancia">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" href="css/normalize.css">
