Añadi el link hacia la ultima actividad en el menu

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <li><a href="#about"><i class="fa fa-pencil"></i>Nosotras</a></li>
                     <li><a href="#projects"><i class="fa fa-paperclip"></i>Galeria</a></li>
                     <li><a href="#actividad"><i class="fa fa-picture-o"></i>Atividades</a><ul>
+                        <li><a href="#hospital"><i class="fa fa-hand-o-right"></i>Jornada en el Hospital</a></li>
                         <li><a href="#violencia"><i class="fa fa-hand-o-right"></i>Violencia Institucional</a></li>
                         <li><a href="#niunamenos"><i class="fa fa-hand-o-right"></i>Ni Una Menos</a></li>
                         <li><a href="#lgtb"><i class="fa fa-hand-o-right"></i>Jornada LGTB</a></li>
@@ -217,7 +218,7 @@
                     <hr>
                     <!--ACTIVIDADES-->
                     <div class="page-section" id="actividad">
-                        <div class="row" >
+                        <div class="row" id="hospital" >
                             <div class="col-md-12" id="lgtb">
                                 <h4 class="widget-title">Este 24 DE JUNIO DE 2023 <strong>Realizamos una importante acción de volanteada y entrega de folletos en el Hospital Eurnekian de Ezeiza 🏥
 
