Modifique el menu  responsive

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <li><a href="#about"><i class="fa fa-user"></i>Nosotras</a></li>
                         <li><a href="#projects"><i class="fa fa-newspaper-o"></i>Galeria</a></li>
                         <li><a href="#actividad"><i class="fa fa-picture-o"></i>Actividades</a><ul>
+                            <li><a href="#hospital"><i class="fa fa-hand-o-right"></i>Hospital Eurnekian</a></li>
                             <li><a href="#violencia"><i class="fa fa-hand-o-right"></i>Violencia Institucional</a></li>
                             <li><a href="#niunamenos"><i class="fa fa-hand-o-right"></i>Ni Una Menos</a></li>
                             <li><a href="#lgtb"><i class="fa fa-hand-o-right"></i>Jornada LGTB</a></li>
