Arreglando los menús

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li><a href="#top"><i class="fa fa-home"></i>Inicio</a></li>
                         <li><a href="#about"><i class="fa fa-user"></i>Nosotras</a></li>
                         <li><a href="#projects"><i class="fa fa-newspaper-o"></i>Galeria</a></li>
-                        <li><a href="#actividad"><i class="fa fa-picture-o"></i>Actividades</a><ul>
+                        <li><a href="#"><i class="fa fa-picture-o"></i>Actividades</a><ul>
                             <li><a href="#hospital"><i class="fa fa-hand-o-right"></i>Hospital Eurnekian</a></li>
                             <li><a href="#violencia"><i class="fa fa-hand-o-right"></i>Violencia Institucional</a></li>
                             <li><a href="#niunamenos"><i class="fa fa-hand-o-right"></i>Ni Una Menos</a></li>
@@ -78,7 +78,7 @@
                     <li><a href="#top"><i class="fa fa-globe"></i>Bienvenidas</a></li>
                     <li><a href="#about"><i class="fa fa-pencil"></i>Nosotras</a></li>
                     <li><a href="#projects"><i class="fa fa-paperclip"></i>Galeria</a></li>
-                    <li><a href="#actividad"><i class="fa fa-picture-o"></i>Atividades</a><ul>
+                    <li><a href="#"><i class="fa fa-picture-o"></i>Atividades</a><ul>
                         <li><a href="#hospital"><i class="fa fa-hand-o-right"></i>Jornada en el Hospital</a></li>
                         <li><a href="#violencia"><i class="fa fa-hand-o-right"></i>Violencia Institucional</a></li>
                         <li><a href="#niunamenos"><i class="fa fa-hand-o-right"></i>Ni Una Menos</a></li>
