Comprimi las fotos del Hospital

--- a/index.html
+++ b/index.html
@@ -239,16 +239,16 @@
                             <br>
                             <div class="swiffy-slider slider-item-ratio slider-item-ratio-1x1 slider-nav-animation slider-nav-animation-fadein slider-item-first-visible slider-nav-autoplay " id="swiffy-animation">
                                 <ul class="slider-container" id="container1">
-                                    <li id="slide1" class="slide-visible"><img src="img/hospital1.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide3"><img src="img/hospital2.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide4"><img src="img/hospital3.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide5"><img src="img/hospital4.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide2"><img src="img/hospital5.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide3"><img src="img/hospital6.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide4"><img src="img/hospital7.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide5"><img src="img/hospital8.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide5"><img src="img/hospital9.jpg" alt="..." loading="lazy"></li>
-                                    <li id="slide5"><img src="img/hospital10.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide1" class="slide-visible"><img src="img/hospital1-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide3"><img src="img/hospital2-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide4"><img src="img/hospital3-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide5"><img src="img/hospital4-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide2"><img src="img/hospital5-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide3"><img src="img/hospital6-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide4"><img src="img/hospital7-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide5"><img src="img/hospital8-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide5"><img src="img/hospital9-min.jpg" alt="..." loading="lazy"></li>
+                                    <li id="slide5"><img src="img/hospital10-min.jpg" alt="..." loading="lazy"></li>
                                 </ul>
                             
                                 <button type="button" class="slider-nav" aria-label="Go to previous"></button>
